Seperation of UI and data collection, still in progress, but does compile.

--- a/ui/SYDE461_UI/SYDE461_UI.csproj
+++ b/ui/SYDE461_UI/SYDE461_UI.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>SYDE461_UI</RootNamespace>
     <AssemblyName>SYDE461_UI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -67,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
+    <Compile Include="ExerciseSession.cs" />
+    <Compile Include="PinchExercise.cs" />
     <Compile Include="ExerciseStore.cs" />
     <Compile Include="InstructionVideo.cs">
       <SubType>Form</SubType>
@@ -150,6 +153,7 @@
     <EmbeddedResource Include="WelcomeScreen.resx">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
     <None Include="ClassDiagram2.cd" />
     <None Include="Properties\Settings.settings">
